--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ markets.json
 dist/
 node_modules/
 client/cmd/dexc/dexc
+client/cmd/dexc-desktop/dexc-desktop
 client/cmd/dexcctl/dexcctl
 client/cmd/assetseed/assetseed
 client/cmd/simnet-trade-tests/simnet-trade-tests
