multi: implement a market-maker bot
core:
Add a market-maker bot to **core**. The bot uses some internal and
(optionally) external signals to calculate a ideal buy and sell
price and a "break-even spread", which is the spread at which
a buy-sell sequence's tx fees equal its profit. These values can
be used as inputs into one of five "gap strategies", which determine
the target spread.

The bot can be created, started, updated, paused, and retired. Each
of those actions generates a notification.

db:
New BotProgram type is not specific to market-maker bots. Everything
is structured with a mind towards future expansion with new automated
trading routines.

ui:
New /mm view enables creation, re-configuration, and monitoring of
existing market-maker bots.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ client/cmd/dexc/dexc
 client/cmd/dexcctl/dexcctl
 client/cmd/assetseed/assetseed
 client/cmd/simnet-trade-tests/simnet-trade-tests
+client/cmd/mmbot/mmbot
 docs/examples/rpcclient/rpcclient
 dex/testing/loadbot/loadbot
 bin/
