moving language files to i18n
rebase dust

--- a/client/webserver/site/tsconfig.json
+++ b/client/webserver/site/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "resolveJsonModule": true,
   }
 }
