--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,15 +10,16 @@
 #
 
 # frontend build
-FROM node:18 AS nodebuilder
+FROM node:19-buster-slim AS nodebuilder
 WORKDIR /root/dex
 COPY . .
+RUN apt-get update && apt-get install -y git
 WORKDIR /root/dex/client/webserver/site/
 RUN npm clean-install
 RUN npm run build
 
 # dexc binary build
-FROM golang:1.19 AS gobuilder
+FROM golang:1.19-alpine AS gobuilder
 COPY --from=nodebuilder /root/dex/ /root/dex/
 WORKDIR /root/dex/client/cmd/dexc/
 RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
@@ -26,7 +27,7 @@ WORKDIR /root/dex/client/cmd/dexcctl/
 RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
 
 # Final image
-FROM alpine:3.16
+FROM debian:buster-slim
 WORKDIR /root
 COPY --from=gobuilder /root/dex/client/cmd/dexc/dexc ./
 COPY --from=gobuilder /root/dex/client/cmd/dexcctl/dexcctl ./
