--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -11,11 +11,11 @@ env:
 
 jobs:
   build-and-push:
-    runs-on: bullseye-slim
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c #v3.3.0
 
     - name: Set up Docker Buildx
       run: |
