--- a/client/Dockerfile.release
+++ b/client/Dockerfile.release
@@ -23,7 +23,7 @@ RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
 
 # Final image
 FROM debian:buster-slim
-RUN apt-get update && apt-get install -y ca-certificates
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y ca-certificates
 WORKDIR /dex
 ENV HOME /dex
 RUN mkdir -p /dex/.dexc && chown 1000 /dex/.dexc
