pkg: add support for packaging darwin as dmg
fix macOS multiple dock icons

rebase changes

build webpack bundle always

fix webkit issue with unsupported inset property

fix webkit backdrop-filter on login form

fix css variable bug

fix webkit rendering of market list, wallet select btns, order btns, and notification tabs

remove redundant css class

fix minor css style padding and bump cache

martonp review changes

dexc-desktop: catch os.Interrupt signal and shutdown gracefully

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ client/asset/btc/electrum/example/server/server
 client/asset/btc/electrum/example/wallet/wallet
 **/testdata/fuzz
 client/asset/eth/cmd/getgas/getgas
+client/cmd/dexc-desktop/pkg/installers
