--- a/client/webserver/site/.stylelintrc
+++ b/client/webserver/site/.stylelintrc
@@ -12,6 +12,8 @@
         "scss/double-slash-comment-empty-line-before": null,
         "scss/at-import-no-partial-leading-underscore": null,
         "scss/at-import-partial-extension": null,
-        "scss/at-extend-no-missing-placeholder": null
+        "scss/at-extend-no-missing-placeholder": null,
+        "declaration-block-no-redundant-longhand-properties": null,
+        "value-no-vendor-prefix": null
     }
 }
