git: ignore dirs created when code run

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ client/asset/btc/electrum/example/wallet/wallet
 **/testdata/fuzz
 client/asset/eth/cmd/getgas/getgas
 client/cmd/dexc-desktop/pkg/installers
+mainnet/
+testnet/
+regtest/
