client/mm: Update Basic Market Maker
This updates the basic market maker strategy to place orders at multiple
distances from the basis price instead of just one. It uses the new
MultiTrade function to do this.

The basis price calculation is also updated to use fiat rates as a
fallback if there are no trades on the dex or an oracle rate.

--- a/client/mm/sample-config.json
+++ b/client/mm/sample-config.json
@@ -1,18 +1,32 @@
 [{
     "host": "127.0.0.1:17273",
     "baseAsset": 42,
-    "quoteAsset": 0,
+    "quoteAsset": 60,
     "baseBalanceType": 0,
     "baseBalance": 50,
     "quoteBalanceType": 0,
     "quoteBalance": 50,
     "marketMakingConfig": {
-        "lots": 2,
         "gapStrategy": "multiplier",
-        "gapFactor": 1,
+        "sellPlacements": [{
+            "gapFactor": 2,
+            "lots": 2
+        },{
+            "gapFactor": 3,
+            "lots": 1
+        }],
+        "buyPlacements": [{
+            "gapFactor": 2,
+            "lots": 2
+        },{
+            "gapFactor": 3,
+            "lots": 1
+        }],
         "driftTolerance": 0.001,
         "oracleWeighting": 0.5,
         "oracleBias": 0,
-        "manualRate": 0
+        "emptyMarketRate": 0.005,
+        "splitTxAllowed": true,
+        "splitBuffer": 10
     }
 }]
