--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ client/asset/btc/electrum/example/wallet/wallet
 client/asset/eth/cmd/getgas/getgas
 client/asset/eth/cmd/deploy/deploy
 client/cmd/dexc-desktop/pkg/installers
+server/noderelay/cmd/sourcenode/sourcenode
