--- a/client/mm/sample-config.json
+++ b/client/mm/sample-config.json
@@ -7,12 +7,31 @@
     "quoteBalanceType": 0,
     "quoteBalance": 50,
     "marketMakingConfig": {
-        "lots": 2,
         "gapStrategy": "multiplier",
-        "gapFactor": 1,
+        "sellPlacements": [{
+            "gapFactor": 2,
+            "lots": 2
+        },{
+            "gapFactor": 3,
+            "lots": 1
+        }],
+        "buyPlacements": [{
+            "gapFactor": 2,
+            "lots": 2
+        },{
+            "gapFactor": 3,
+            "lots": 1
+        }],
         "driftTolerance": 0.001,
         "oracleWeighting": 0.5,
         "oracleBias": 0,
-        "manualRate": 0
+        "emptyMarketRate": 0.005,
+        "baseOptions": {
+            "multisplit": "true"
+        },
+        "quoteOptions": {
+            "multisplit": "true",
+            "multisplitbuffer": "5"
+        }
     }
 }]
