Use MultiTrade instead of Trade

--- a/client/mm/sample-config.json
+++ b/client/mm/sample-config.json
@@ -13,6 +13,13 @@
                 "profitTrigger": 0.01,
                 "maxActiveArbs": 5,
                 "numEpochsLeaveOpen": 5
+            },
+            "baseOptions": {
+                "multisplit": "true"
+            },
+            "quoteOptions": {
+                "multisplit": "true",
+                "multisplitbuffer": "5"
             }
         }
     ],
