refactor client reserves

--- a/server/cmd/dcrdex/sample-dcrdex.conf
+++ b/server/cmd/dcrdex/sample-dcrdex.conf
@@ -154,9 +154,9 @@
 ; Default value is 2.
 ; maxepochcancels=2
 
-; The accumulated penalty score at which when an account gets closed.
+; The accumulated penalty score at which when a bond is revoked.
 ; Default value is 20.
-; banscore=20
+; penaltythreshold=20
 
 ; The starting limit on the number of settling lots per-market for new users. 
 ; Used to limit size of likely-taker orders.
