--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,7 +10,14 @@
 #
 
 # frontend build
-FROM node:19-buster-slim AS nodebuilder
+
+# The image below is node:current-alpine3.18 (linux/amd64)
+# It's pulled by the digest (immutable id) to avoid supply-chain attacks.
+# Maintainer Note:
+#    To update to a new digest, you must first manually pull the new image:
+#    `docker pull node:<new version>`
+#    Docker will print the digest of the new image after the pull has finished.
+FROM node@sha256:d75175d449921d06250afd87d51f39a74fc174789fa3c50eba0d3b18369cc749 AS nodebuilder
 WORKDIR /root/dex
 COPY . .
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y git
@@ -19,7 +26,14 @@ RUN npm clean-install
 RUN npm run build
 
 # dexc binary build
-FROM golang:1.19-alpine AS gobuilder
+
+# The image below is golang:1.21.0-alpine3.18 (linux/amd64)
+# It's pulled by the digest (immutable id) to avoid supply-chain attacks.
+# Maintainer Note:
+#    To update to a new digest, you must first manually pull the new image:
+#    `docker pull golang:<new version>`
+#    Docker will print the digest of the new image after the pull has finished.
+FROM golang@sha256:445f34008a77b0b98bf1821bf7ef5e37bb63cc42d22ee7c21cc17041070d134f AS gobuilder
 COPY --from=nodebuilder /root/dex/ /root/dex/
 WORKDIR /root/dex/client/cmd/dexc/
 RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
