--- a/client/Dockerfile.release
+++ b/client/Dockerfile.release
@@ -13,7 +13,7 @@
 #
 
 # dexc binary build
-FROM golang:1.20-alpine AS gobuilder
+FROM golang:1.21-alpine AS gobuilder
 WORKDIR /root/dex
 COPY . . 
 WORKDIR /root/dex/client/cmd/dexc/
@@ -22,7 +22,7 @@ WORKDIR /root/dex/client/cmd/dexcctl/
 RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
 
 # Final image
-FROM debian:buster-slim
+FROM debian:bookworm-slim
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y ca-certificates
 WORKDIR /dex
 ENV HOME /dex
