client/{mm, core}: Simple Arbitrage (#2480)
* client/{mm, core}: Simple Arbitrage

This implements the simple arbitrage opportunity which only places orders
when there is an arbitrage opportunity.

- A `libxc` package is added which contains a `CEX` interface used to
  interact with a centralized exchange's API. It is implemented for
  Binance.
- The new strategy is implemented in `mm_simple_arb.go` and can be run by
  creating a `BotConfig` with a non-nil `ArbCfg`.
- A testbinance command line tool is added which starts a webserver that
  responds to the requests that the Binance testnet does not support.
- A `VWAP` function is added to the client orderbook.
- `client/comms/WSConn` is updated with a `SendRaw` function which sends
  arbitrary byte slices over the websocket connection.

--- a/client/mm/sample-config.json
+++ b/client/mm/sample-config.json
@@ -1,37 +1,33 @@
-[{
-    "host": "127.0.0.1:17273",
-    "baseAsset": 42,
-    "quoteAsset": 0,
-    "baseBalanceType": 0,
-    "baseBalance": 50,
-    "quoteBalanceType": 0,
-    "quoteBalance": 50,
-    "marketMakingConfig": {
-        "gapStrategy": "multiplier",
-        "sellPlacements": [{
-            "gapFactor": 2,
-            "lots": 2
-        },{
-            "gapFactor": 3,
-            "lots": 1
-        }],
-        "buyPlacements": [{
-            "gapFactor": 2,
-            "lots": 2
-        },{
-            "gapFactor": 3,
-            "lots": 1
-        }],
-        "driftTolerance": 0.001,
-        "oracleWeighting": 0.5,
-        "oracleBias": 0,
-        "emptyMarketRate": 0.005,
-        "baseOptions": {
-            "multisplit": "true"
-        },
-        "quoteOptions": {
-            "multisplit": "true",
-            "multisplitbuffer": "5"
+{
+    "botCfgs": [
+        {
+            "host": "127.0.0.1:17273",
+            "baseAsset": 60,
+            "quoteAsset": 0,
+            "baseBalanceType": 0,
+            "quoteBalanceType": 0,
+            "baseBalance": 100,
+            "quoteBalance": 100,
+            "arbConfig": {
+                "cexName": "Binance",
+                "profitTrigger": 0.01,
+                "maxActiveArbs": 5,
+                "numEpochsLeaveOpen": 5
+            },
+            "baseOptions": {
+                "multisplit": "true"
+            },
+            "quoteOptions": {
+                "multisplit": "true",
+                "multisplitbuffer": "5"
+            }
         }
-    }
-}]
+    ],
+    "cexCfgs": [
+        {
+            "cexName": "Binance",
+            "apiKey": "",
+            "apiSecret": ""
+        }
+    ]
+}
