client/mm: Arb Market Maker
This adds a market making strategy that is kind of a combination
between the basic market maker and the simple arbitrage strategies.
Based on a CEX order book, it places orders on the DEX order book, and
when there is a match on the DEX, the opposite order on the DEX is
immediately executed for a profit.

--- a/client/mm/sample-config.json
+++ b/client/mm/sample-config.json
@@ -8,18 +8,54 @@
             "quoteBalanceType": 0,
             "baseBalance": 100,
             "quoteBalance": 100,
-            "simpleArbConfig": {
+            "arbMarketMakerConfig": {
                 "cexName": "Binance",
-                "profitTrigger": 0.01,
-                "maxActiveArbs": 5,
-                "numEpochsLeaveOpen": 5
-            },
-            "baseOptions": {
-                "multisplit": "true"
-            },
-            "quoteOptions": {
-                "multisplit": "true",
-                "multisplitbuffer": "5"
+                "buyPlacements": [
+                    {
+                        "lots": 1,
+                        "multiplier": 1.5
+                    },
+                    {
+                        "lots": 1,
+                        "multiplier": 4
+                    },
+                    {
+                        "lots": 1,
+                        "multiplier": 4
+                    },
+                    {
+                        "lots": 1,
+                        "multiplier": 4
+                    }
+                ],
+                "sellPlacements": [
+                    {
+                        "lots": 1,
+                        "multiplier": 1.5
+                    },
+                    {
+                        "lots": 1,
+                        "multiplier": 4
+                    },
+                    {
+                        "lots": 1,
+                        "multiplier": 4
+                    },
+                    {
+                        "lots": 1,
+                        "multiplier": 4
+                    }
+                ],
+                "profit": 0.01,
+                "driftTolerance" : 0.001,
+                "numEpochsLeaveOpen": 10,
+                "baseOptions": {
+                    "multisplit": "true"
+                },
+                "quoteOptions": {
+                    "multisplit": "true",
+                    "multisplitbuffer": "5"
+                }
             }
         }
     ],
