implement toy mesh network with high-level description docs

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ client/asset/eth/cmd/getgas/getgas
 client/asset/eth/cmd/deploy/deploy
 client/cmd/dexc-desktop/pkg/installers
 server/noderelay/cmd/sourcenode/sourcenode
+tatanka/cmd/demo/demo
