--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ client/tor/build
 server/cmd/geogame/geogame
 internal/cmd/xmrswap/xmrswap
 internal/cmd/xmrswap/config.json
+internal/libsecp256k1/secp256k1
+server/cmd/dcrdex/evm-protocol-overrides.json
