Joe review updates

--- a/client/mm/sample-config.json
+++ b/client/mm/sample-config.json
@@ -8,6 +8,13 @@
             "quoteBalanceType": 0,
             "baseBalance": 100,
             "quoteBalance": 100,
+            "cexCfg": {
+                "name": "Binance",
+                "baseBalanceType": 0,
+                "quoteBalanceType": 0,
+                "baseBalance": 100,
+                "quoteBalance": 100
+            },
             "arbMarketMakerConfig": {
                 "cexName": "Binance",
                 "buyPlacements": [
