Buck review updates

--- a/client/mm/sample-config.json
+++ b/client/mm/sample-config.json
@@ -62,6 +62,12 @@
                 "quoteOptions": {
                     "multisplit": "true",
                     "multisplitbuffer": "5"
+                },
+                "autoRebalance": {
+                    "minBaseAmt": 3000000000,
+                    "minBaseTransfer" : 1000000000,
+                    "minQuoteAmt": 20000000,
+                    "minQuoteTransfer": 10000000
                 }
             }
         }
