add market file validation
Perform basic validation and validate the lot and bond sizes
specified in the market configuration file. The server Backend
drivers that have variable dust limits implement new methods
for calculating minimum lot and bond sizes for a given fee rate.
The methods are used for validating the lot sizes and bond sizes
specified in the markets.json file. This process requires
converting lot sizes to quote asset units, so requires conversion
rates. Rates are calculated based on fiat exchange rates fetched
from coinpaprika. Validation can be performed in 1 of 2 ways.
1) With the helper program at server/cmd/validateconfig, or
2) with the --validate server flag.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ client/cmd/dexc-desktop/pkg/installers
 client/cmd/testbinance/testbinance
 server/noderelay/cmd/sourcenode/sourcenode
 tatanka/cmd/demo/demo
+server/cmd/validatemarkets
