--- a/client/webserver/site/tsconfig.json
+++ b/client/webserver/site/tsconfig.json
@@ -10,5 +10,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "strictNullChecks": true
-  }
+  },
+  "types": [ "webpack-env" ]
 }
