--- a/client/webserver/site/.stylelintrc
+++ b/client/webserver/site/.stylelintrc
@@ -10,6 +10,7 @@
         "value-keyword-case": null,
         "scss/dollar-variable-pattern": null,
         "scss/double-slash-comment-empty-line-before": null,
+        "scss/no-global-function-names": null,
         "scss/at-import-no-partial-leading-underscore": null,
         "scss/at-import-partial-extension": null,
         "scss/at-extend-no-missing-placeholder": null,
