add server admin gui

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ tatanka/cmd/demo/demo
 server/cmd/validatemarkets
 client/cmd/translationsreport/translationsreport
 client/cmd/translationsreport/worksheets
+server/cmd/dexadm/dexadm
