testing/dcr: Update last block's timestamp.
Recent dcrwallet updates require that the last block's timestamp be less
than 24 hours old. In order to continue to use our saved blocks in the
harness, update the last block's timestamp to now when starting.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ client/cmd/simnet-trade-tests/simnet-trade-tests
 client/cmd/mmbot/mmbot
 docs/examples/rpcclient/rpcclient
 dex/testing/loadbot/loadbot
+dex/testing/dcr/addblock
 bin/
 bin-v*/
 client/webserver/site/template-builder/template-builder
