--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ client/asset/eth/cmd/getgas/getgas
 client/asset/eth/cmd/deploy/deploy
 client/cmd/dexc-desktop/pkg/installers
 client/cmd/testbinance/testbinance
+client/cmd/mmbaltracker/mmbaltracker
 server/noderelay/cmd/sourcenode/sourcenode
 tatanka/cmd/demo/demo
 server/cmd/validatemarkets
