internal: Add libsecp256k1 c library.
Add a c library that has some primitive cryptographic functions needed
for working with adaptor signatures.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ client/cmd/translationsreport/translationsreport
 client/cmd/translationsreport/worksheets
 server/cmd/dexadm/dexadm
 server/cmd/geogame/geogame
+internal/libsecp256k1/secp256k1
