--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ client/cmd/translationsreport/worksheets
 server/cmd/dexadm/dexadm
 server/cmd/geogame/geogame
 internal/libsecp256k1/secp256k1
+internal/cmd/xmrswap/xmrswap
