--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ server/cmd/validatemarkets
 client/cmd/translationsreport/translationsreport
 client/cmd/translationsreport/worksheets
 server/cmd/dexadm/dexadm
+server/cmd/geogame/geogame
