client,webserver: webpack build ID used as browser cache ID.
	- Emit a webpack build ID when building site and store in webpack-build-id.txt

	- Embed the webpack build ID into bodybuilder as a url query string:-
	  webpackBuildIdQuery fetches latest webpack build from the webpack-build-id.txt
	  file in app site directory and makes it available to append to the main css
	  link and to the main script link in bodybuilder; this should cause no reload
	  of the main css/js files if they are already cached by the browser.
	  If webpackBuildIdFile is not found return a fallback query that will make the
	  browser reload css/js.

	- Some eslint in webpack dir.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ dex/testing/loadbot/loadbot
 bin/
 bin-v*/
 client/webserver/site/template-builder/template-builder
+client/webserver/site/webpack-build-id.txt
 dex/testing/btc/harnesschain.tar.gz
 client/asset/btc/electrum/example/server/server
 client/asset/btc/electrum/example/wallet/wallet
