Golang base image update to 1.24, docker image rebrand

--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   DOCKER_CLI_EXPERIMENTAL: enabled
-  IMAGE_NAME: decred/dcrdex
+  IMAGE_NAME: decred/bisonwallet
 
 jobs:
   build-and-push:
