--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -36,9 +36,9 @@ RUN npm run build
 FROM golang@sha256:43c094ad24b6ac0546c62193baeb3e6e49ce14d3250845d166c77c25f64b0386 AS gobuilder
 COPY --from=nodebuilder /root/dex/ /root/dex/
 WORKDIR /root/dex/client/cmd/bisonw/
-RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
+RUN CGO_ENABLED=0 GOOS=linux go build
 WORKDIR /root/dex/client/cmd/bwctl/
-RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
+RUN CGO_ENABLED=0 GOOS=linux go build
 
 # Final image
 FROM debian:buster-slim
