Remove GO111MODULE=on (#3237)
The default value has been "on" since go 1.16 so this declaration only
serves as noise in modern projects.

--- a/client/Dockerfile.release
+++ b/client/Dockerfile.release
@@ -24,9 +24,9 @@ FROM golang@sha256:445f34008a77b0b98bf1821bf7ef5e37bb63cc42d22ee7c21cc17041070d1
 WORKDIR /root/dex
 COPY . . 
 WORKDIR /root/dex/client/cmd/bisonw/
-RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
+RUN CGO_ENABLED=0 GOOS=linux go build
 WORKDIR /root/dex/client/cmd/bwctl/
-RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go build
+RUN CGO_ENABLED=0 GOOS=linux go build
 
 # Final image
 FROM debian:bookworm-slim
