build: Update golangci-lint to v2.0.2
Various changes in this new major version, including a new config file format:

- gofmt and goimports are now categorized as formatters (instead of
  linters) and are moved to their own section.
- The functionality of gosimple has been bundled into staticcheck. Only
  the gosimple behaviour is enabled (prefix "S1") and all other
  staticcheck behaviour is disabled.
- typecheck is now always on and cannot be independently
  enabled/disabled.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,18 +1,12 @@
+version: "2"
 run:
-  deadline: 10m
-
-output:
-  formats: colored-line-number
-
+  timeout: 10m
 linters:
-  disable-all: true
+  default: none
   enable:
     - asciicheck
     - bidichk
     - durationcheck
-    - gofmt
-    - goimports
-    - gosimple
     - govet
     - grouper
     - ineffassign
@@ -21,6 +15,20 @@ linters:
     - reassign
     - rowserrcheck
     - sqlclosecheck
+    - staticcheck
     - tparallel
-    - typecheck
     - unconvert
+  settings:
+    staticcheck:
+      checks:
+          - S1*
+  exclusions:
+    paths:
+      - docs/examples
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    paths:
+      - docs/examples
