--- a/client/webserver/site/tsconfig.json
+++ b/client/webserver/site/tsconfig.json
@@ -4,6 +4,7 @@
     "noImplicitAny": true,
     "module": "es6",
     "target": "es6",
+    "lib": ["es2017", "dom", "dom.iterable"],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
