--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ internal/cmd/xmrswap/config.json
 internal/libsecp256k1/secp256k1
 server/cmd/dcrdex/evm-protocol-overrides.json
 client/bworg/bworg
+tatanka/cmd/tatanka/tatanka
