bworg: use Tivra's site for bisonwallet.org (#3222)
* implement web server

* Use tivra AI site for now

* add icons and self-host javascript

* fix logo. more support links. download os images

* larger logo and navbar text. fix POLY -> POL

* update release version

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ internal/cmd/xmrswap/xmrswap
 internal/cmd/xmrswap/config.json
 internal/libsecp256k1/secp256k1
 server/cmd/dcrdex/evm-protocol-overrides.json
+client/bworg/bworg
