--- a/client/Dockerfile.release
+++ b/client/Dockerfile.release
@@ -29,7 +29,7 @@ WORKDIR /root/dex/client/cmd/bwctl/
 RUN CGO_ENABLED=0 GOOS=linux go build
 
 # Final image
-FROM debian:buster-slim
+FROM debian:bookworm-slim
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y ca-certificates
 WORKDIR /dex
 ENV HOME=/dex
