bisonw-desktop: move from webview to electron
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/cmd/bisonw-desktop/.gitignore
+++ b/client/cmd/bisonw-desktop/.gitignore
@@ -2,3 +2,8 @@ build/
 certs/
 pkg/windows-msi/bin
 pkg/windows-msi/obj
+electron/node_modules/
+electron/resources/
+electron/out
+installers/
+resources/
