dex/politeia: Politea Integration Phase 1
This PR consists of code for Phase 1 of 3 for Politeia integration. It adds
the required data types, data retrieval methods and database code for Politeia.

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ internal/libsecp256k1/secp256k1
 server/cmd/dcrdex/evm-protocol-overrides.json
 client/bworg/bworg
 tatanka/cmd/tatanka/tatanka
+dex/politeia/politeia_test.db
