multi: Bridge UI
Adds a UI to the wallets page that allows users to bridge EVM assets
between chains.

Additionally:
- Communicates fees for bridge completion transactions to the initiator
- Adds an index to the eth transaction db to be able to query bridge
  initiations by asset ID.

--- a/client/webserver/site/tsconfig.json
+++ b/client/webserver/site/tsconfig.json
@@ -9,6 +9,8 @@
     "sourceMap": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "jsx": "react-jsx",
+    "lib": ["es6", "dom", "dom.iterable"]
   }
 }
