--- a/client/webserver/site/package.json
+++ b/client/webserver/site/package.json
@@ -9,17 +9,24 @@
     "analyze": "webpack --config webpack/analyze.js",
     "build": "npm exec tsc && webpack --config webpack/prod.js --progress --color",
     "build_dev": "npm exec tsc && webpack --config webpack/dev.js --progress --color",
-    "lint": "npm exec tsc && npm exec -- eslint src --ext .js --ext .ts",
+    "lint": "npm exec tsc && npm exec -- eslint src --ext .js --ext .ts --ext .tsx",
     "check-types": "npm exec tsc"
   },
   "keywords": [],
   "author": "The Decred developers",
   "license": "Blue Oak 1.0.0",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.21.5",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.6",
     "@babel/runtime": "^7.21.5",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
