xmr: Update comments

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ client/bworg/bworg
 tatanka/cmd/tatanka/tatanka
 dex/politeia/politeia_test.db
 dex/lexi/cmd/lexidbexplorer/lexidbexplorer
+client/asset/xmr/cmd/mkjson/mkjson
+
