mm: Add server snapshots.
The server generates signed per-account epoch snapshots after each
epoch's matching. Each snapshot lists the MM's standing orders on the
book (with rates and quantities) plus market-wide best bid/ask for
context. The MM collects these as signed receipts and can export them
for offline verification.

Wire protocol: add SubscribeMMSnapshots request and MMEpochSnapshot
notification with deterministic Serialize() for signing.

Server: subscription management and snapshot generation in
processReadyEpoch, using book.Best/BuyOrders/SellOrders filtered by
account, signed via auth.Sign and delivered via auth.Send.

Client: notification handler with signature verification, BoltDB
storage with cursor-based range queries, ExportMMSnapshots core
method, SubscribeMMSnapshots on bot start, and mmreport RPC route.

Verification tool (client/cmd/verifymm): standalone signature
verification, coverage calculation, and spread assessment from
exported snapshot JSON.

--- a/.gitignore
+++ b/.gitignore
@@ -60,10 +60,7 @@ server/cmd/dcrdex/evm-protocol-overrides.json
 client/bworg/bworg
 tatanka/cmd/tatanka/tatanka
 dex/politeia/politeia_test.db
-<<<<<<< HEAD
 dex/lexi/cmd/lexidbexplorer/lexidbexplorer
 client/asset/xmr/cmd/mkjson/mkjson
-
-=======
+client/cmd/verifymm/verifymm
 *.db
->>>>>>> 81063df4 (client/webserver: Implement politeia APIs and pages)
